--- a/root/templates/policies.tt
+++ b/root/templates/policies.tt
@@ -1,10 +1,15 @@
 <h1>NLLC Policies and Guidelines</h1>
 
+<p>Northern Light Learning Center is governed by a board of directors.</p>
+
+<h3>From the BY-LAWS of the Northern Light Learning Center:</h3>
+<p>The Board shall have the general power to manage and control the affairs and the property of the Corporation, including the power to reimburse those incurring expenses on behalf on the Corporation, and to authorize the payment of those providing services to the Corporation. The Board shall have the full power by majority vote by those present, to adopt rules and regulations governing the action of the Board. The Board shall ensure that the Corporation adhere to the fundamental and basic purposes of the Corporation, as expressed in the Certificate of Incorporation, as it may from time to time amend.</p>
+<p>Full BY-LAWS available upon request.</p>
+
+<h3>All Northern Light Learning Center policies must be followed during all onsite and offsite programs. An NLLC program is one that appears on the NLLC website, is part of the enrollment process, is used as a NLLC member contribution, uses NLLC space, and/or uses the name Northern Light Learning Center.</h3>
+
 <h3>Behavior Guidelines</h3>
-
-<p>All Northern Light Learning Center policies must be followed onsite at all times, and during offsite programs that are being used as a contribution.</p>
-
-<p>NLLC is a community, and as a community, we are all responsible for seeing that the guidelines are being followed and for ensuring the safety of all participants. We also need to remember, at all times, that the choices we make affect those around us. Please keep in mind that this is a fairly quiet office/residential building with occupants who are not accustomed to having large numbers of young people moving through it.</p>
+<p>NLLC is a community of families, and as a community, we are all responsible for seeing that the guidelines are being followed and for ensuring the safety of all participants. We also need to remember, at all times, that the choices we make affect those around us. Please keep in mind that this is a fairly quiet office/residential building with occupants who are not accustomed to having large numbers of young people moving through it.</p>
 
 <h3>Parental Supervision Policies</h3>
 <p>Young people need to be supervised as outlined in these guidelines for the following reasons:</p>
@@ -25,26 +30,42 @@
 <p>The policies of walking and talking quietly through the hallways must be understood and complied with by the young people.</p>
 <p>Young people aged 12 years and up arriving at the learning center without an adult must proceed directly to their program space to meet their supervising adult, and may not linger in hallways or other locations at Henry St. John Building, including the playground and parking lot. They cannot remain onsite unsupervised after their program ends.</p>
 <p>Supervision arrangements need to be made by parents. A young person may not arrive at the learning center and begin looking for someone to supervise him/her during his/her program.</p>
-<p>If a young person aged 12 years or older arrives at a program without supervision, he/she will not be permitted to attend that program and will not be able to return to their program until his/her parent arranges supervision. </p>
+<p>If a young person aged 12 years or older arrives at a program without supervision, he/she will not be permitted to attend that program and will not be able to return to their program until his/her parent arranges supervision.</p>
+
+<h3>Supervision Policy for Young Adults who are 18 or older</h3>
+<p>Teens 18  and older (whose families are members of NLLC) are permitted to do the following: </p>
+<ul>
+<li>Lead or co-lead an NLLC class or event</li>
+<li>Be one of the two adults required for an NLLC class or event</li>
+<li>Act in loco parentis for family members (siblings, cousins)</li>
+<li>Take classes offered at NLLC</li>
+<li>Remain within NLLC leased property between classes</li>
+<li>Attend NLLC classes without a parent on the premises</li>
+<li>Enter onto INHS property to attend classes and/or act in loco parentis for family members</li>
+</ul>
+<p>Any variance from this policy, such as an 18+ teen acting in loco parentis for non-family members, or two 18+ teens leading and co-leading a program, would need prior approval from the board.</p>
 
 <h3>Guidelines for Young People</h3>
 <p>Hallways are to be used to move from one area of the building to another, and because we share the building with other people and businesses, hallways should not be used as a place to hang out or have conversations. Remember to WALK and use a quiet voice.</p>
-
-<h3>Use of Space Policies</h3>
+<h3> Use of Space Policies</h3>
 <ol>
 <li>It is important that we stay in our program areas. The Main NLLC space is ours alone, while the gym, conference room, and playground are shared with others. We may only use the gym and conference room during scheduled programs and only for the purposes of that scheduled program (unless permission is granted by the leader).</li>
 <li>Hallways are to be used for passage from one area to another ONLY. Waiting in hallways is discouraged. Family members who are not involved in a program may wait in the NLLC Main Space or on the playground.</li>
-<li>Please leave all areas of the building neat and clean. Although some parents have volunteered to be responsible for checking the areas at the end of the day, it is important that we ALL clean up after ourselves and leave the area in good order for the next group.</li>
-<li>Running, climbing, throwing, and yelling should be saved for the gym or playground area, not the Main Space, conference room, or hallways.</li>
+<li>Please leave all areas of the building neat and clean. It is important that we ALL clean up after ourselves and leave the area in good order for the next group.</li>
+<li>Running, climbing, throwing, and yelling should be saved for the gym or playground area, not the Main Space, conference room, or hallways.<br />
 <li>Although the playground is a public space, we ask that whenever you are on the property for NLLC activities, please consider it to be part of the learning center and follow the guidelines. This is particularly important with regard to adult supervision.</li>
+<li>NLLC DOES NOT PERMIT EATING IN THE GYM AND CONFERENCE ROOM. Exceptions are made for functions which have made specific arrangements to eat and clean up in these rooms. Otherwise, no eating is permitted.  We ask that in consideration of the leaders of programs you attend in these spaces and NLLC's desire to remain a welcome tenant at Henry St. John, you not do so. Please plan ahead to snack and lunch in the mainspace or on the playground. We encourage program leaders to remind participants in programs in these spaces of our policy at the beginning of your program. And if you notice another member eating in these spaces, a friendly reminder of our policy would be deeply appreciated.</li>
 </ol>
+
+<h3>RULES from Ithaca Neighborhood Housing Services(our landlord):</h3>
+<p>Wheeled things are permitted outside on street-edge sidewalks only, not on playground sidewalk, steps, ramps, or in the parking lot.  Please be alert for and yield to pedestrians at all times.Those using the gym should also be aware that INHS does not permit the use of any wheeled things (such as scooters, skateboards, roller skates and the like) in the gym unless they have only soft, rubber tires, like bicycle tires.</p>
+<p>Dogs are OK on leash only, outdoors only, with constant supervision and clean-up only. </p>
 
 <h3>No Nut and Food Allergy Policy</h3>
 <p>NLLC classes, events, activities and gatherings are to be nut
 free zones. Do not bring nuts with you anywhere on the NLLC
 premises (this includes the playground and parking lot). If you consume or touch nuts prior to attending an NLLC class or event, please wash your hands.  The following foods are to be avoided:</p>
 <ul>
-<li>
 <li>almonds</li>
 <li>cashews</li>
 <li>pecans</li>
@@ -94,7 +115,7 @@ premises (this includes the playground and parking lot). If you consume or touch
 <p>At the beginning of the session leaders or co-leaders should communicate their expectations regarding behavior and parental involvement.</p>
 <p>The leader or co-leader of a class may not act in loco parentis to another families child/ren unless pre-arranged and pre-approved by the board.</p>
 
-<h3>Programming Policies</h3>
+<h1>Programming Policies</h1>
 <h3>Membership</h3>
 <p>For Northern Light Learning Center to provide a safe and consistent environment for our families, and sustain itself financially, people attending programs must be registered members of NLLC. We will have special events to introduce interested families to our Center, such as monthly potlucks, an annual Open House, etc.</p>
 
@@ -106,39 +127,20 @@ premises (this includes the playground and parking lot). If you consume or touch
 <p>At least two adults must be present during each program.</p>
 <p>Parent/Guardians will abide by the Member Guidelines and Agreements signed during registration, and will support their children in doing the same.</p>
 
-<p style="margin-bottom:0in">Materials Fee Policy</p>
-<p style="margin-bottom:0in"><br>
-</p>
-<p style="margin-bottom:0in">Because high fees limit participation
-and members would like to know what substantial fees are being
-used for, the Board has created a Materials Fee Policy. We want to
-both keep fees low and also provide accountability for fees
-collected.
-</p>
-
-<p style="margin-bottom:0in">Therefore:</p>
-<ul><li><p style="margin-bottom:0in">Whenever possible, classes should
-assess no fee; if this is not possible, fees should be <br>kept as
-low as possible.
-</p>
-</li><li><p style="margin-bottom:0in">If materials must be bought,
-instructors should give participants the option of buying their own
-materials whenever this is feasible.</p>
-</li><li><p style="margin-bottom:0in">Any materials fees paid to a class
-leader in excess of $5 per person for the <br>session must be
-supported with an itemized costs list. Fees can be itemized before a
-class <br>begins if costs are known then. If exact costs are not
-available before the class begins, <br>estimated costs may be
-submitted, but actual itemized costs must be provided by the end <br>of
-the session. Fees collected in excess of actual class costs must be
-returned to <br>participants.
-</p>
-</li></ul>
+<h3>Materials Fee Policy</h3>
+<p>Because high fees limit participation and members would like to know what substantial fees are being used for, the Board has created a Materials Fee Policy. We want to both keep fees low and also provide accountability for fees collected. </p>
+<p>Therefore:</p>
+<ul>
+<li>Whenever possible, classes should assess no fee; if this is not possible, fees should be kept aslow as possible.</li>
+<li>If materials must be bought,instructors should give participants the option of buying their own materials whenever this is feasible.</li>
+<li>Any materials fees paid to a classleader in excess of $5 per person for the session must besupported with an itemized costs list. Fees can be itemized before a class begins if costs are known then. If exact costs are not
+available before the class begins, estimated costs may be submitted, but actual itemized costs must be provided by the end of the session. Fees collected in excess of actual class costs must bereturned to participants.</li>
+</ul>
 
 <h3>Registration and Attendance</h3>
 <p>Parents should let the leader of a program know if a child is not planning to attend a program they have registered for, as there may be a waiting list.</p>
 
-<h3>Offsite Programs: (also known as field trips)</h3>
+<h3>Offsite Programs and Field Trips:</h3>
 <p>NLLC cannot provide transportation, but families can meet at another location for a program, take a public bus, or walk.</p>
 
 <h3>Leaders/Co-leaders</h3>
@@ -157,6 +159,18 @@ returned to <br>participants.
 <li>coordinating cleaning and closing of the space used</li>
 <li>making arrangements for the collection non-member leader fees</li>
 </ul>
+
+<h3>Club Status</h3>
+<p>To have official club status, an NLLC program MUST:</p>
+<ol>
+<li>Admit any NLLC member who falls within the club's membership guidelines (which could be limited, as activities are, by age or skill level).</li>
+<li>schedule their meeting time in a space and time that is not wanted by other programs, which generally means a club cannot be scheduled until after all regular programs for a session have been scheduled. Off-site programs can be scheduled along with other regular programs, as there is virtually no competition involved.</li>
+</ol>
+<p>Official clubs MAY:</p>
+<ol>
+<li>Include participants who are not NLLC members. However, non-member participants should contribute to NLLC in some way commensurate with the benefit they receive for participating. This small fee, or other contribution, should be discussed with and accepted by the club leader.</li>
+<li>Be considered one's contribution, providing the club meets regularly and for a total programmed time comparable to other NLLC activities.</li>
+</ol>
 
 <h3>Infectious Disease Policy</h3>
 <p>Do NOT attend learning center programs or come to the learning center if you know you are contagious with any communicable disease. Do NOT bring infected items to the learning center, including the Henry St. John playground and parking lot. Please be considerate of pregnant women and individuals with immunological problems, and other groups that may be particularly vulnerable to a particular disease.</p>
