problem with family list; members who hadn't enrolled not listed

--- a/root/templates/membership.tt
+++ b/root/templates/membership.tt
@@ -11,5 +11,5 @@ sometimes there will be a waiting list.</p>
 <p><strong>Plan to help out:</strong> Our cooperative contribution requirement is a way of ensuring that work is fairly distributed within the organization. We are sharing our time, energy, and skills to build a supportive learning community. There are many ways to contribute, including leading or coordinating a class series, planning a community event, hosting a social group or club, doing administrative support, or even helping with cleaning or childcare. The Membership application includes full list of options and form to fill out.</p>
 
 <p><strong>Policies and Guidelines</strong></p>
-<p>Current and prospective members should review NLLC&#8217;s <a href="[% c.uri_for('policies') %]">policies and guidelines</a> governing behavior, space use and other topics.
+<p>Current and prospective members should review NLLC&#8217;s <a href="/policies">policies and guidelines</a> governing behavior, space use and other topics.
 </p>
