--- a/root/templates/member/faq.tt
+++ b/root/templates/member/faq.tt
@@ -7,11 +7,11 @@
 <p>
 
 <h3>Q: How do I know what the deadlines are for payment, submitting a contribution or enrolling for programs, or when the various classes start and end?</h3>
-<p>A: On the website, there is a timeline for each session (under the “members” tab, or  <a href="http://nllchs.org/member/timeline">http://nllchs.org/member/timeline</a>), which gives deadlines for contributions, enrollment, etc. You can also access the calendar (again, under the “members” tab, or   <a href="http://nllchs.org/icalendar/week.php">http://nllchs.org/icalendar/week.php</a>), which shows when each class is taking place.
+<p>A: On the website, there is a timeline for each session (under the 'members” tab, or  <a href="http://nllchs.org/member/timeline">http://nllchs.org/member/timeline</a>), which gives deadlines for contributions, enrollment, etc. You can also access the calendar (again, under the 'members” tab, or   <a href="http://nllchs.org/icalendar/week.php">http://nllchs.org/icalendar/week.php</a>), which shows when each class is taking place.
 <p>
 
 <h3>Q: Do I need to be onsite with my child?</h3>
-<p>A: Yes. NLLC does not provide supervision. We have no paid staff. It is vital that all children are accompanied by their parent/guardian or caregiver. Parents are entirely responsible for their children’s safety and well-being at the Learning Center and associated programs. Every child at NLLC must be accompanied by their parent or by another adult acting as their parent (in loco parentis). For more information on the supervision policy, see “Parental Supervision Policies” at   <a href="http://nllchs.org/policies">http://nllchs.org/policies.</a>
+<p>A: Yes. NLLC does not provide supervision. We have no paid staff. It is vital that all children are accompanied by their parent/guardian or caregiver. Parents are entirely responsible for their children’s safety and well-being at the Learning Center and associated programs. Every child at NLLC must be accompanied by their parent or by another adult acting as their parent (in loco parentis). For more information on the supervision policy, see 'Parental Supervision Policies” at   <a href="http://nllchs.org/policies">http://nllchs.org/policies.</a>
 <p>
 
 <h3>Q: Can I bring younger siblings? What if the younger child won't sit quietly and I need to be in the room with my older child?</h3>
@@ -21,7 +21,7 @@
 <p>A: Members are expected to register for the full year, however, you may pay your $300 fee in installments by contacting the Financial Coordinator to make arrangements prior to the payment deadline.<p> 
 
 <h3>Q: What activities/classes are available for my child's age group?</h3>
-<p>A: A listing of all programs can be found on the website under the “members” tab, under “new programs,” or “current programs.” Each program provides a description of the appropriate age or skill level.<p>
+<p>A: A listing of all programs can be found on the website under the 'members” tab, under 'new programs,” or 'current programs.” Each program provides a description of the appropriate age or skill level.<p>
 
 <h3>Q: How do I enroll my child in programs?</h3>
 <p>A: When the enrollment period opens, the Enrollment Coordinators will send an email out on the listserv with a link to the enrollment page. There are detailed directions on that page for how to enroll your child. Please note that you may not enroll until after you have made payment arrangements and submitted your contribution by the deadlines. If you miss the deadlines, you may be able to enroll after all other members IF you contact the Financial and/or Alternate Contribution Coordinator immediately. In this case, your child will not have priority in enrollment, and can only enroll in classes in which there is space left.<p> 
@@ -32,8 +32,8 @@
 <h3>Q: What if we get waitlisted for a class? What happens then?</h3>
 <p>A: If any of the students decide to drop the class, the Enrollment Coordinators will offer that spot to the next child in line. Where your child is on the list depends on how they ranked the program when enrolling.<p>
 
-<h3>Q: I am a little confused about what is considered a “contribution.” Do I have to lead a class?</h3>
-<p>A: New members are exempt from making a contribution in their first session (though they should still submit the Alternate Contribution Form online with “new member” as the contribution). After the first session, every member is expected to contribute. An adequate contribution is limited to the following:  Leading a 4-10 week class; field trip or event series, coordinating a major event open to the broader community, hosting a regular weekly or bi-monthly social function for children or adults; serving on the Board of Directors; serving in a coordinator position; co-leading a 8-10 week program in an equal role with the other leader; or a contribution for which you have received prior board approval. An equivalent combination of contributions will be acceptable as well.<p>
+<h3>Q: I am a little confused about what is considered a 'contribution.” Do I have to lead a class?</h3>
+<p>A: New members are exempt from making a contribution in their first session (though they should still submit the Alternate Contribution Form online with 'new member” as the contribution). After the first session, every member is expected to contribute. An adequate contribution is limited to the following:  Leading a 4-10 week class; field trip or event series, coordinating a major event open to the broader community, hosting a regular weekly or bi-monthly social function for children or adults; serving on the Board of Directors; serving in a coordinator position; co-leading a 8-10 week program in an equal role with the other leader; or a contribution for which you have received prior board approval. An equivalent combination of contributions will be acceptable as well.<p>
 
 <h3>Q: I am a little intimidated about leading a class, and/or at a loss for ideas – where do I go for help?</h3>
 <p>A: Guidelines for organizing a program can be found on the website at<a href="http://nllchs.org/member/planning"> http://nllchs.org/member/planning</a>. Programs from past years can be found at  <a href="http://nllchs.org/member/old_activities">http://nllchs.org/member/old_activities</a> and provide a wealth of ideas and inspiration! More information about leader responsibilities is at  <a href="http://nllchs.org/member/leaders">http://nllchs.org/member/leaders</a>. You may wish to team up with a more experienced leader to co-lead a class, which is considered a contribution.
