--- a/root/templates/member/planning.tt
+++ b/root/templates/member/planning.tt
@@ -16,10 +16,6 @@
 <p  >“relaxed and playful, students can drift in and out of participation”</p>
 <p >In addition: if you have special requirements for a class (prerequisites, etc.) please note them clearly in this field of your program proposal.</p>
 <br />
-<p >Minimum/Maximum Number of Participants:</p>
-<br />
-<p >These numbers should not include the children of leaders and co-leaders who will be automatically enrolled in the program.</p>
-<br />
 <p > Scheduling information:</p>
 <br />
 <p  >1.  Program leaders must include clear and thoughtful class requirements/constraints as part of their program proposal. The scheduling team is requesting as much information as possible.  The WEB program format may not have specific fields for all you need to include, add the information in other appropriate locations on WEB form.</p>
@@ -29,7 +25,6 @@
 <br />
 <p >Please include information about how your preference for choices for location/time and day of week rank.  For example, a leader may have a strong first choice, but be open to their program being placed an time after 1 pm all days of the week, as long as it does not conflict with Flint Tool Making.  Here a leader is stating a strong first preference, but not limiting the placement of the program to that one singular day of the week, time and location.  The  first preference is not diluted if a leader provides other options.</p>
 <br />
-<p  >2.   Cluster programming and pre-scheduling have been an effective means of providing days of programming that meet families needs. Leader are encouraged to work together to design an entire day or half day of programming and submit that information by the deadline to Madhurima Agarwal to reserve space for programs OR sequences of programs 1 and 1/2 hours AND 8 weeks or more in length, so that this basic schedule can be announced before other proposals are accepted.  Pre-scheduling blocks can be set aside without all Leaders submitting specific program proposals. What we do need is a firm commitment from pre-scheduling program leaders, with specifics on duration, and desired times/locations of programs.</p>
-<p>If you submit a cluster of programs, please  be certain about your request of time and dates.
+<p>Contact your age group representative for help with arranging program clusters. <a href="/member/contacts">Contacts</a> 
 </p>
 	<P>&nbsp;</P>
