--- a/root/templates/member/proposal.tt
+++ b/root/templates/member/proposal.tt
@@ -16,7 +16,7 @@ in order to enroll in programs. Equivalent combinations of contributions are acc
 
 <p>
 To make an alternative contribution please complete the alternate contribution form with 
-one of the above options. Contact Stephanie Haskins at <a href="mailto:shaskins@htva.net.us">shaskins@htva.net.us</a> or 607-277-7279 
+one of the above options. Contact Carol Bobertz at <a href="mailto:sgmom2@yahoo.com">sgmom2@yahoo.com</a> or 387-4393 
 if you have questions or to arrange the details of a non-program membership contribution. 
 You must commit to a specific contribution before participating in the learning center. 
 Either the alternate contribution form or this form MUST be completed or your child(ren) will not be able to enroll.
@@ -143,8 +143,7 @@ how many students you are willing to take.
 </div>		 		 		 		 		 		 		 		 		 		 
 
 <div class="inputcell">
-	<p><strong>Do you need a support person to help you with this program?</strong>(co-leader, childcare, etc. ) If there are no volunteers, you may need to request help from the parents of children enrolled in the program.
-		Do you need any other support?(resources, information, etc.)			</p>
+	<p>Please describe any support needs you have so that other members can volunteer to help. (co-leader, childcare, etc. ) If there are no volunteers, you may need to request help from the parents of children enrolled in the program. Do you need any other support? (resources, information, etc.)
   <p>
   <textarea name="support" cols="27" rows="2"></textarea>
   </p>
