Aug 2011 updates of enroll and program_list page

--- a/root/templates/member/enroll/index.tt
+++ b/root/templates/member/enroll/index.tt
@@ -12,14 +12,14 @@
 </ul>
 
 <p><strong>Please read!</strong></p>
-<p>If your child does not get into all the programs that they initially enrolled in and you wish to enroll your child in additional programs at that point, you may contact the leader of those programs to ask them to enroll your child in those programs.</p>
+<p>If your child does not get into all the programs that they initially enrolled in and you wish to enroll your child in additional programs at that point, you may contact the enrollment coordinator of those programs to ask them to enroll your child in those programs.</p>
 
 <p><strong>Please consider the following points when enrolling:</strong>
 <ul>
 <li>Are the programs you are enrolling in suitable for your child? Read the description carefully, 
 especially the &#8220;Children Requirements&#8221;.<strong> Contact the leader if you have any questions.</strong>
 You must contact an enrollment coordinator (
-Jennifer Moran at <a href="mailto:sharingminds@verizon.net">sharingminds@verizon.net</a>, 257-5020
+Carolyn Soriano at <a href="mailto:ca@clubcyrus.com">ca@clubcyrus.com</a>, 272-8024
 or Lauren Korfine at <a href="mailto:lk79@cornell.edu">lk79@cornell.edu</a>, 256-0132
 ) to get permission for enrollment if your child is not within the age range listed.
 </li>
